--- a/S&F-Hub/CodiFont/vista/SoporteTc.fxml
+++ b/S&F-Hub/CodiFont/vista/SoporteTc.fxml
@@ -11,12 +11,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.ControladorSoporteTc">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.ControladorSoporteTc">
    <children>
       <Button fx:id="subirError" layoutX="287.0" layoutY="351.0" mnemonicParsing="false" text="Enviar" />
       <ImageView depthTest="DISABLE" disable="true" fitHeight="109.0" fitWidth="157.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Captura.PNG" />
+            <Image url="@img/Captura.PNG" />
          </image>
          <effect>
             <Blend />
