--- a/S&F-Hub/CodiFont/vista/GraficosAdministrador.fxml
+++ b/S&F-Hub/CodiFont/vista/GraficosAdministrador.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -28,12 +29,11 @@
                 <NumberAxis fx:id="yAxis" label="Numero de usuarios" prefHeight="204.0" prefWidth="49.0" side="LEFT" />
               </yAxis>
             </LineChart>
-            <Label layoutX="44.0" layoutY="140.0" prefHeight="26.0" prefWidth="120.0" text="Mensajes de error">
+            <Label layoutX="69.0" layoutY="127.0" prefHeight="26.0" prefWidth="120.0" text="Mensajes de error">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="lblError" alignment="TOP_LEFT" layoutX="44.0" layoutY="166.0" prefHeight="213.0" prefWidth="120.0" textAlignment="JUSTIFY" textFill="RED" wrapText="true" />
             <BarChart fx:id="grfSeresBuscadas" layoutX="234.0" layoutY="291.0" prefHeight="261.0" prefWidth="509.0">
               <xAxis>
                 <CategoryAxis label="Nombre de las Series" side="BOTTOM" fx:id="xAxis" />
@@ -48,6 +48,7 @@
                </font>
             </Button>
             <Button fx:id="Salir" layoutX="44.0" layoutY="559.0" mnemonicParsing="false" text="Salir" />
+            <ListView fx:id="lvError" layoutX="29.0" layoutY="165.0" prefHeight="232.0" prefWidth="200.0" />
          </children>
       </AnchorPane>
    </children>
