--- a/S&F-Hub/CodiFont/vista/SoporteTc.fxml
+++ b/S&F-Hub/CodiFont/vista/SoporteTc.fxml
@@ -30,7 +30,7 @@
          </font>
       </Label>
       <TextArea fx:id="Texto" layoutX="92.0" layoutY="233.0" prefHeight="109.0" prefWidth="240.0" />
-      <TextField fx:id="Email" layoutX="183.0" layoutY="116.0" text="E-mail" />
+      <TextField fx:id="Email" layoutX="183.0" layoutY="116.0" promptText="E-mail" />
       <TextArea layoutX="391.0" layoutY="141.0" prefHeight="233.0" prefWidth="181.0" />
       <ComboBox layoutX="92.0" layoutY="188.0" prefWidth="150.0" promptText="Problemas" />
       <Button fx:id="btnVolver3" layoutX="484.0" layoutY="45.0" mnemonicParsing="false" text="Volver" />
