--- a/S&F-Hub/CodiFont/vista/Administrador.fxml
+++ b/S&F-Hub/CodiFont/vista/Administrador.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -31,14 +32,26 @@
             <Image url="@img/Captura.PNG" />
          </image>
       </ImageView>
-      <TextField fx:id="txtUsuario" layoutX="322.0" layoutY="254.0" prefHeight="27.0" prefWidth="176.0" />
-      <PasswordField fx:id="txtContraseña" layoutX="322.0" layoutY="400.0" prefHeight="27.0" prefWidth="176.0" />
+      <TextField fx:id="txtUsuario" layoutX="322.0" layoutY="254.0" prefHeight="27.0" prefWidth="176.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <PasswordField fx:id="txtContraseña" layoutX="322.0" layoutY="400.0" prefHeight="27.0" prefWidth="176.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></PasswordField>
       <Button fx:id="btnIniciar" layoutX="349.0" layoutY="463.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="122.0" text="Iniciar Sesion">
          <font>
             <Font size="14.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
       <Label fx:id="lblError" alignment="CENTER" layoutX="322.0" layoutY="530.0" prefHeight="38.0" prefWidth="176.0" />
-      <Button fx:id="Usuario" layoutX="735.0" layoutY="556.0" mnemonicParsing="false" text="Usuario" />
+      <Button fx:id="Usuario" layoutX="735.0" layoutY="556.0" mnemonicParsing="false" text="Usuario">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
    </children>
 </AnchorPane>
