--- a/S&F-Hub/CodiFont/vista/Inicio2.fxml
+++ b/S&F-Hub/CodiFont/vista/Inicio2.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -54,7 +55,10 @@
                   <Image url="@img/PeakyBlinders.jpg" />
                </image>
             </ImageView>
-            <Button fx:id="btnSyP8" layoutX="415.0" layoutY="213.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
+            <Button fx:id="btnSyP8" layoutX="415.0" layoutY="213.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
             <ImageView fitHeight="120.0" fitWidth="101.0" layoutX="287.0" layoutY="199.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@img/Elseñordelosanillos-comunidaddelanillo.jpg" />
@@ -91,31 +95,91 @@
                </image>
             </ImageView>
             <ScrollBar layoutX="791.0" orientation="VERTICAL" prefHeight="687.0" prefWidth="14.0" visible="false" />
-            <Button fx:id="btnBobs" layoutX="85.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP2" layoutX="250.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP3" layoutX="415.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP4" layoutX="581.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP5" layoutX="749.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP6" layoutX="85.0" layoutY="213.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP7" layoutX="250.0" layoutY="213.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP9" layoutX="581.0" layoutY="213.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP10" layoutX="749.0" layoutY="213.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP11" layoutX="85.0" layoutY="386.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP12" layoutX="250.0" layoutY="386.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP13" layoutX="415.0" layoutY="386.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP14" layoutX="581.0" layoutY="386.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnSyP15" layoutX="749.0" layoutY="386.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button" />
-            <Button fx:id="btnAyuda" layoutX="110.0" layoutY="595.0" mnemonicParsing="false" text="Soporte" />
-            <Button fx:id="Salir" layoutX="776.0" layoutY="595.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="59.0" text="Salir" />
+            <Button fx:id="btnBobs" layoutX="85.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP2" layoutX="250.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP3" layoutX="415.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP4" layoutX="581.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP5" layoutX="749.0" layoutY="33.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP6" layoutX="85.0" layoutY="213.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP7" layoutX="250.0" layoutY="213.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP9" layoutX="581.0" layoutY="213.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP10" layoutX="749.0" layoutY="213.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP11" layoutX="85.0" layoutY="386.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP12" layoutX="250.0" layoutY="386.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP13" layoutX="415.0" layoutY="386.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP14" layoutX="581.0" layoutY="386.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnSyP15" layoutX="749.0" layoutY="386.0" mnemonicParsing="false" opacity="0.0" prefHeight="92.0" prefWidth="153.0" text="Button">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnAyuda" layoutX="110.0" layoutY="595.0" mnemonicParsing="false" text="Soporte">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="Salir" layoutX="776.0" layoutY="595.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="59.0" text="Salir">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
          </children></AnchorPane>
-      <ComboBox fx:id="cbSPM" layoutX="67.0" layoutY="87.0" opacity="0.77" prefHeight="25.0" prefWidth="198.0" promptText="Series, peliculas, Mi Lista" />
+      <ComboBox fx:id="cbSPM" layoutX="67.0" layoutY="87.0" opacity="0.77" prefHeight="25.0" prefWidth="198.0" promptText="Series, peliculas, Mi Lista">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></ComboBox>
       <Label alignment="CENTER" layoutX="307.0" layoutY="28.0" prefHeight="51.0" prefWidth="185.0" text="S&amp;F Hub">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <TextField fx:id="txtBuscarSerie" layoutX="564.0" layoutY="87.0" prefHeight="25.0" prefWidth="172.0" promptText="Buscar Serie" />
-      <Button fx:id="btnBuscarSerie" layoutX="700.0" layoutY="87.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="36.0" />
-      <Button fx:id="btnLista" layoutX="786.0" layoutY="87.0" mnemonicParsing="false" text="Crear Lista" />
+      <TextField fx:id="txtBuscarSerie" layoutX="564.0" layoutY="87.0" prefHeight="25.0" prefWidth="172.0" promptText="Buscar Serie">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <Button fx:id="btnBuscarSerie" layoutX="700.0" layoutY="87.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="36.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="btnLista" layoutX="786.0" layoutY="87.0" mnemonicParsing="false" text="Crear Lista">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
    </children>
 </AnchorPane>
