--- a/S&F-Hub/CodiFont/vista/Loggin.fxml
+++ b/S&F-Hub/CodiFont/vista/Loggin.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -26,16 +27,28 @@
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <PasswordField fx:id="passwordContraseña" layoutX="325.0" layoutY="314.0" />
-            <TextField fx:id="txtUsuario" layoutX="325.0" layoutY="210.0" />
+            <PasswordField fx:id="passwordContraseña" layoutX="325.0" layoutY="314.0">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></PasswordField>
+            <TextField fx:id="txtUsuario" layoutX="325.0" layoutY="210.0">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></TextField>
             <Button fx:id="btnIniciarSesion" layoutX="430.0" layoutY="386.0" mnemonicParsing="false" text="Iniciar Sesion">
                <font>
                   <Font size="14.0" />
-               </font></Button>
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
             <Button fx:id="btnRegistrarse" layoutX="281.0" layoutY="386.0" text="Registrarse">
                <font>
                   <Font size="14.0" />
-               </font></Button>
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
             <Label fx:id="lblError" alignment="CENTER" contentDisplay="CENTER" layoutX="274.0" layoutY="463.0" prefHeight="51.0" prefWidth="251.0" textFill="RED">
                <font>
                   <Font size="14.0" />
@@ -46,7 +59,10 @@
                   <Image url="@img/Captura.PNG" />
                </image>
             </ImageView>
-            <Button fx:id="EntrarAdmin" layoutX="730.0" layoutY="545.0" mnemonicParsing="false" opacity="0.1" text="Admin" />
+            <Button fx:id="EntrarAdmin" layoutX="730.0" layoutY="545.0" mnemonicParsing="false" opacity="0.1" text="Admin">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
          </children>
       </AnchorPane>
    </children>
