--- a/S&F-Hub/CodiFont/vista/SoporteTc.fxml
+++ b/S&F-Hub/CodiFont/vista/SoporteTc.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +14,10 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.ControladorSoporteTc">
    <children>
-      <Button fx:id="subirError" layoutX="287.0" layoutY="351.0" mnemonicParsing="false" text="Enviar" />
+      <Button fx:id="subirError" layoutX="287.0" layoutY="351.0" mnemonicParsing="false" text="Enviar">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
       <ImageView depthTest="DISABLE" disable="true" fitHeight="109.0" fitWidth="157.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@img/Captura.PNG" />
@@ -29,10 +33,25 @@
             <Font name="Candara Light Italic" size="18.0" />
          </font>
       </Label>
-      <TextArea fx:id="Texto" layoutX="92.0" layoutY="233.0" prefHeight="109.0" prefWidth="240.0" />
-      <TextField fx:id="Email" layoutX="183.0" layoutY="116.0" promptText="E-mail" />
-      <TextArea layoutX="391.0" layoutY="141.0" prefHeight="233.0" prefWidth="181.0" />
-      <ComboBox layoutX="92.0" layoutY="188.0" prefWidth="150.0" promptText="Problemas" />
-      <Button fx:id="btnVolver3" layoutX="484.0" layoutY="45.0" mnemonicParsing="false" text="Volver" />
+      <TextArea fx:id="Texto" layoutX="92.0" layoutY="233.0" prefHeight="109.0" prefWidth="240.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextArea>
+      <TextField fx:id="Email" layoutX="183.0" layoutY="116.0" promptText="E-mail">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextArea layoutX="391.0" layoutY="141.0" prefHeight="233.0" prefWidth="181.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextArea>
+      <ComboBox layoutX="92.0" layoutY="188.0" prefWidth="150.0" promptText="Problemas">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></ComboBox>
+      <Button fx:id="btnVolver3" layoutX="484.0" layoutY="45.0" mnemonicParsing="false" text="Volver">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
    </children>
 </AnchorPane>
