--- a/S&F-Hub/CodiFont/vista/PyS.fxml
+++ b/S&F-Hub/CodiFont/vista/PyS.fxml
@@ -44,41 +44,13 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></CheckBox>
-      <ImageView fitHeight="31.0" fitWidth="37.0" layoutX="14.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../amazon.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="31.0" fitWidth="37.0" layoutX="54.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../apple.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="31.0" fitWidth="37.0" layoutX="130.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../fox.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="31.0" fitWidth="37.0" layoutX="89.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../disney.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="31.0" fitWidth="37.0" layoutX="174.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../hbo.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="31.0" fitWidth="37.0" layoutX="259.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../netflix.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="31.0" fitWidth="37.0" layoutX="215.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../moviestar.png" />
-         </image>
-      </ImageView>
+      <ImageView fx:id="img0" fitHeight="31.0" fitWidth="37.0" layoutX="14.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="img1" fitHeight="31.0" fitWidth="37.0" layoutX="54.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="img2" fitHeight="31.0" fitWidth="37.0" layoutX="130.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="img3" fitHeight="31.0" fitWidth="37.0" layoutX="89.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="img4" fitHeight="31.0" fitWidth="37.0" layoutX="174.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="img5" fitHeight="31.0" fitWidth="37.0" layoutX="259.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="img6" fitHeight="31.0" fitWidth="37.0" layoutX="215.0" layoutY="311.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="btnVolver" layoutX="690.0" layoutY="40.0" mnemonicParsing="false" text="Volver">
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -87,16 +59,16 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Label fx:id="lblTitulo" alignment="CENTER" layoutX="329.0" layoutY="28.0" prefHeight="50.0" prefWidth="162.0">
+      <Label fx:id="lblTitulo" alignment="CENTER" contentDisplay="CENTER" layoutX="214.0" layoutY="28.0" prefHeight="50.0" prefWidth="386.0" textAlignment="CENTER">
          <font>
             <Font size="18.0" />
          </font></Label>
       <Label fx:id="lblSinposis" alignment="TOP_LEFT" layoutX="339.0" layoutY="159.0" prefHeight="194.0" prefWidth="394.0" textAlignment="JUSTIFY" wrapText="true">
          <font>
-            <Font size="13.0" />
+            <Font size="15.0" />
          </font>
       </Label>
-      <Label fx:id="lblReparto" alignment="TOP_CENTER" layoutX="339.0" layoutY="393.0" prefHeight="171.0" prefWidth="394.0" textAlignment="JUSTIFY">
+      <Label fx:id="lblReparto" alignment="TOP_LEFT" layoutX="339.0" layoutY="393.0" prefHeight="207.0" prefWidth="442.0" textAlignment="JUSTIFY" wrapText="true">
          <font>
             <Font size="15.0" />
          </font>
