--- a/LMSGI/PaginaWeb/css/index.css
+++ b/LMSGI/PaginaWeb/css/index.css
@@ -215,8 +215,8 @@ a{
   border-radius: 5px;
   padding: 10px 7px;
   text-decoration: none;
-  color: #fff;
-  background-color: #333;
+  color:#E50914;
+  background-color: darkred;
   margin: 5px;
 }
 /*-----Ajuste de tamaño de la pagina----*/
