--- a/LMSGI/PaginaWeb/css/paginaP.css
+++ b/LMSGI/PaginaWeb/css/paginaP.css
@@ -84,14 +84,28 @@ margin-left: 20%;
 margin-right: 20%;
 
 }
+
+.h3{
+	text-align: justify;
+margin-left: 20%;
+margin-right: 20%;
+}
+ .video{
+margin-left: 20%;
+margin-right: 20%;
+ 	
+ }
+
+
+
 .h2{
 	margin-top: 3%;
 margin-left: 23%;
 }
-.h3{
+/*.h3{
 	margin-top: 3%;
 	margin-left: 23%;
-}
+}*/
 .texto3{
 	text-align: justify;
 	margin-left: 20%;
